# uwaterloo-collaborative-text-editor

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  config-overrides.js  issues.txt  package-lock.json  package.json
editor-server/: Cargo.toml
editor-server/src/: handler.rs  main.rs  room.rs  ws.rs
rust/warp_ws/: Cargo.toml
rust/warp_ws/src/: main.rs
src/: App.css  App.tsx  index.css  index.tsx  lib.rs  textEditor.ts
src/components/SideBar/: index.tsx
src/page/Register/: index.tsx  styles.css
src/page/TextEditor/: index.tsx  textEditor.ts
static/: index.html
wasm/: Cargo.toml
wasm/src/: lib.rs
www/: index.js  package-lock.json  package.json
