[package]
name = "editor-server"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["macros", "sync", "rt-multi-thread"]}
warp = "0.3.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.15"
uuid = { version = "0.4", features = ["serde", "v4"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
names = "0.11.0"